# memd

./: .gitignore  INBOX-PROTOCOL.md  README.md  flake.nix  memd.py  pyproject.toml
contrib/: README.md  memd-sweep.service  memd-sweep.timer
contrib/agents/: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  copilot-instructions.md  memd.mdc
memd/: __init__.py  cli.py  config.py  curator.py  digest.py  errors.py  hooks.py  inbox.py  memory.py  sweep.py  sync.py
nix/: home-manager.nix
tests/: conftest.py  test_antigravity.py  test_brief.py  test_config.py  test_core.py  test_curation_quality.py  test_curator.py  test_cursors.py  test_digest.py  test_inbox.py  test_memory_repo.py  test_redact.py  test_sweep.py  test_sync_e2e.py  test_validate_budget.py
