[build-system]
# >=77 for PEP 639 SPDX license expression support
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "memd"
dynamic = ["version"]
description = "Agent-driven project-memory curator"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "lowcache" }]
requires-python = ">=3.10"
keywords = ["ai", "agents", "memory", "context", "claude", "llm", "curator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/lowcache/memd"
Repository = "https://github.com/lowcache/memd"
Issues = "https://github.com/lowcache/memd/issues"

[project.scripts]
memd = "memd.cli:main"

# attr targets memd.__init__ explicitly: plain "memd.__version__" resolves to
# the top-level memd.py shim (flat layout name collision), not the package.
[tool.setuptools.dynamic]
version = {attr = "memd.__init__.__version__"}

[tool.setuptools.packages.find]
include = ["memd*"]
